# Purple-Rain

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Purple-Rain  README.md  cmake_install.cmake
src/: Constant.hpp  Constants.hpp  HSL.cpp  HSL.hpp  Main.cpp  Utils.cpp  Utils.hpp
src/GUI/: Box.cpp  Box.hpp  Button.cpp  Button.hpp  Component.cpp  Component.hpp  Interface.cpp  Interface.hpp  Label.cpp  Label.hpp  Slider.cpp  Slider.hpp
src/Rain/: Canvas.cpp  Canvas.hpp  Drop.cpp  Drop.hpp
